--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
   "devDependencies": {
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.23.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.3.2",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-eslint": "^7.2.3",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-hot-loader": "^1.3.9",
     "css-loader": "^0.25.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "fixed-data-table": "^0.6.3",
     "html-webpack-plugin": "^2.22.0",
@@ -49,8 +52,6 @@
     "postcss-loader": "^0.13.0",
     "precss": "^1.4.0",
     "react-hot-loader": "^3.0.0-beta.2",
-    "eslint": "^3.19.0",
-    "eslint-plugin-react": "^7.0.1",
     "resolve-url-loader": "^1.6.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.2",
